add support for junit jvmargs, syssprops, + envvars